force-app/unpackaged/objects/Salesforce_Question__c.object
<CustomObject>
    <fields>
        <fullName>Question_Details__c</fullName>
        <label>Question Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Summary__c</fullName>
        <label>Question Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Video_Link__c</fullName>
        <label>Question Video Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <formula>HYPERLINK(Id, Question_Summary__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Details__c</fullName>
        <label>Response Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Summary__c</fullName>
        <label>Response Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Video_Link__c</fullName>
        <label>Response Video Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Salesforce_Question_ID_18_digit__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Question ID (18-digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Requirement_ID_18_digit__c</fullName>
        <formula>CASESAFEID(Salesforce_Requirement__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Requirement ID (18-digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Requirement__c</fullName>
        <label>Salesforce Requirement</label>
        <referenceTo>Salesforce_Requirement__c</referenceTo>
        <relationshipLabel>Salesforce Questions</relationshipLabel>
        <relationshipName>Salesforce_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhyMinded_ID_18_digit__c</fullName>
        <label>WhyMinded ID (18-digit)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhyMinded_Project_Task_ID_18_digit__c</fullName>
        <label>WhyMinded Project Task ID (18-digit)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhyMinded_Requirement_ID_18_digit__c</fullName>
        <label>WhyMinded Requirement ID (18-digit)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Salesforce Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Question_Summary__c</columns>
        <columns>Question_Video_Link__c</columns>
        <columns>Question_Details__c</columns>
        <columns>Response_Summary__c</columns>
        <columns>Response_Video_Link__c</columns>
        <columns>Response_Details__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Unresolved_Questions</fullName>
        <columns>Question_Summary__c</columns>
        <columns>Question_Video_Link__c</columns>
        <columns>Question_Details__c</columns>
        <columns>Response_Summary__c</columns>
        <columns>Response_Video_Link__c</columns>
        <columns>Response_Details__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Client Response Handled</value>
        </filters>
        <label>Unresolved Questions</label>
    </listViews>
    <nameField>
        <displayFormat>SFQA-{YYYY}{MM}{DD}-{000000000}</displayFormat>
        <label>Salesforce Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Questions</pluralLabel>
    <recordTypes>
        <fullName>Client_Question</fullName>
        <active>true</active>
        <label>Client Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>WhyMinded_Question</fullName>
        <active>false</active>
        <label>WhyMinded Question</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>